--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div class="banner-content">
                             <h1 class="banner-title">
                                 Making the most of the ever-growing <br/>
-                                <span class="banner-title_red">Information Technology</span>
+                                <span class="banner-title_red">Banner edited</span>
                             </h1>
                             <p class="banner-subtitle">
                                 Managed by a team of professional experts with extensive experience and impressive track records
