add project page

--- a/pages/project.html
+++ b/pages/project.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
 
@@ -18,12 +18,14 @@
             <div class="container">
                 <div class="header-row">
                     <div class="header-logo">
-                        <img src="./images/logo.svg" alt="site logo">
+                        <a href="../index.html">
+                            <img src="../images/logo.svg" alt="site logo">
+                        </a>
                     </div>
 
                     <nav class="header-nav">
                         <a href="#" class="header-nav__link">Services</a>
-                        <a href="./pages/project.html" class="header-nav__link">Product</a>
+                        <a href="#" class="header-nav__link header-nav__link_active">Product</a>
                         <a href="#" class="header-nav__link">Technology</a>
                         <a href="#" class="header-nav__link">About</a>
                         <a href="#" class="header-nav__link">Client</a>
@@ -83,21 +85,7 @@
 
             <section class="banner">
                 <div class="container">
-                    <div class="banner-row">
-                        <div class="banner-content">
-                            <h1 class="banner-title">
-                                Making the most of the ever-growing <br/>
-                                <span class="banner-title_red">Banner edited</span>
-                            </h1>
-                            <p class="banner-subtitle">
-                                Managed by a team of professional experts with extensive experience and impressive track records
-                            </p>
-                            <button class="banner-button">Read More</button>
-                        </div>
-                        <div class="banner-image">
-                            <img src="./images/banner-image.svg" alt="banner image">
-                        </div>
-                    </div>
+                    banner
                 </div>
             </section>
 
